tests/ui/repr/repr-transparent-repr-c.stderr
error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-repr-c.rs:18:22
   |
LL | pub struct T5(Sized, ReprC1Zst);
   |                      ^^^^^^^^^
   |
   = note: this field contains `ReprC1Zst`, which is marked with `#[repr(C)]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-repr-c.rs:22:15
   |
LL | pub struct T6(ReprC1Zst, Sized);
   |               ^^^^^^^^^
   |
   = note: this field contains `ReprC1Zst`, which is marked with `#[repr(C)]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-repr-c.rs:26:15
   |
LL | pub struct T7(T1, Sized); // still wrong, even when the repr(C) is hidden inside another type
   |               ^^
   |
   = note: this field contains `ReprC1Zst`, which is marked with `#[repr(C)]`, and makes it not a breaking change to become non-zero-sized in the future.

error: aborting due to 3 previous errors

